force-app/main/default/objects/Good__c/Good__c.object-meta.xml
<CustomObject>
    <label>Good</label>
    <nameField>
        <label>Good Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>