force-app/main/default/objects/Good__c/fields/Active_Ingredients_Concentrations__c.field-meta.xml
<CustomField>
    <fullName>Active_Ingredients_Concentrations__c</fullName>
    <label>Active Ingredients &amp; Concentrations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>