force-app/main/default/objects/Good__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Goods</relationshipLabel>
    <relationshipName>Goods</relationshipName>
    <type>Lookup</type>
</CustomField>