force-app/main/default/objects/Good__c/fields/Approved_In_Other_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Approved_In_Other_Jurisdiction__c</fullName>
    <inlineHelpText>If the good is approved in another jurisdiction(s) please record them here</inlineHelpText>
    <label>Approved In Other Jurisdiction?</label>
    <length>150</length>
    <type>Text</type>
</CustomField>