force-app/main/default/objects/Good__c/fields/Dosage_Range__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Range__c</fullName>
    <inlineHelpText>Initial Dose / Max Dose</inlineHelpText>
    <label>Dosage Range</label>
    <length>100</length>
    <type>Text</type>
</CustomField>