force-app/main/default/objects/Good__c/fields/Expected_Duration_of_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Expected_Duration_of_Treatment__c</fullName>
    <label>Expected Duration of Treatment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>