force-app/main/default/objects/Good__c/fields/Product_Company__c.field-meta.xml
<CustomField>
    <fullName>Product_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Goods</relationshipLabel>
    <relationshipName>Goods</relationshipName>
    <type>Lookup</type>
</CustomField>