force-app/main/default/objects/Good__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Company from whom you will obtain the unapproved good</inlineHelpText>
    <label>Sponsor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Goods (Sponsor)</relationshipLabel>
    <relationshipName>Goods1</relationshipName>
    <type>Lookup</type>
</CustomField>