force-app/main/default/objects/Good__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dosage__c</columns>
    <columns>Dosage_Form__c</columns>
    <columns>Dosage_Range__c</columns>
    <columns>Expected_Duration_of_Treatment__c</columns>
    <columns>Application__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>